--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_FOLDER_API=https://bootcamp-api.codeit.kr/api/sample/folder
-REACT_APP_USER_API=https://bootcamp-api.codeit.kr/api/sample/user
+REACT_APP_BASE_URL= https://bootcamp-api.codeit.kr
