--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-share": "^5.0.3",
     "styled-components": "^6.1.4",
     "styled-reset": "^4.5.2",
     "web-vitals": "^2.1.4"
