--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "camelcase": "^8.0.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
