--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/react-dom": "^18.2.19",
     "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.8",
+    "styled-reset": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "20.11.20",
