--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "@types/jest": "^29.5.12",
     "@types/react-dom": "^18.2.19",
+    "camelcase": "^8.0.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-share": "^5.1.0",
     "styled-components": "^6.1.8",
     "styled-reset": "^4.5.2"
   },
