--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-share": "^5.1.0",
     "styled-components": "^6.1.8",
     "styled-reset": "^4.5.2"
