--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,10 @@
     "incremental": true,
     "baseUrl": "./",
     "paths": {
+      "@components/*": ["pages/components/*"],
+      "@styles/*": ["pages/styles/*"],
       "@apis/*": ["src/apis/*"],
-      "@components/*": ["src/components/*"],
       "@hooks/*": ["src/hooks/*"],
-      "@styles/*": ["src/styles/*"],
       "@utils/*": ["src/utils/*"],
       "@public/*": ["public/*"]
     }
