--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "camelcase-keys": "^9.1.3",
     "next": "14.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "^18",
+    "react-share": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
