--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.28.9",
     "axios": "^1.6.7",
     "camelcase-keys": "^9.1.3",
     "next": "14.1.1",
