--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.28.9",
     "axios": "^1.6.7",
     "camelcase-keys": "^9.1.3",
+    "cookies-next": "^4.1.1",
     "next": "14.1.1",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
